# kttv-weather

./: .gitignore  LICENSE  README.md  README.zh-TW.md  deploy.sh  fetch_weather.py  kttv_client.py  pyproject.toml  requirements.txt  sites.example.json
tests/: test_fetch_weather.py
